RESOLVED FIXED258752
ScrollerMac shouldn't use hardcoded controlSize
https://bugs.webkit.org/show_bug.cgi?id=258752
Summary ScrollerMac shouldn't use hardcoded controlSize
Luke Warlow
Reported 2023-06-30 15:45:21 PDT
This issue tracks replacing the hardcoded NSControlSizeRegular reference in ScrollerMac with one derived from ScrollbarWidth value. This doesn't track getting that ScrollbarWidth value from the styles that will be addressed in a follow up.
Attachments
Luke Warlow
Comment 1 2023-07-01 02:59:44 PDT
EWS
Comment 2 2023-07-01 16:51:09 PDT
Committed 265691@main (78b4149d570a): <https://commits.webkit.org/265691@main> Reviewed commits have been landed. Closing PR #15475 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-07-01 16:52:18 PDT
Note You need to log in before you can comment on or make changes to this bug.