ScrollerMac shouldn't use hardcoded NSControlSize https://bugs.webkit.org/show_bug.cgi?id=258752

Reviewed by Simon Fraser.

This patch moves the function to convert from ScrollbarWidth to NSControlSize into ScrollTypesMac.h.
This is then used inside of ScrollerMac instead of a hard coded NSControlSizeRegular.
ScrollerPairMac currently returns a hardcoded ScrollbarWidth::Auto, so this patch has no behaviour changes.

* Source/WebCore/page/scrolling/mac/ScrollerMac.mm:
(WebCore::ScrollerMac::attach):
(WebCore::ScrollerMac::updateScrollbarStyle):
* Source/WebCore/page/scrolling/mac/ScrollerPairMac.h:
* Source/WebCore/page/scrolling/mac/ScrollerPairMac.mm:
(WebCore::ScrollerPairMac::scrollbarWidthStyle const):
* Source/WebCore/platform/mac/ScrollTypesMac.h:
(WebCore::nsControlSizeFromScrollbarWidth):
* Source/WebCore/platform/mac/ScrollbarThemeMac.mm:
(WebCore::ScrollbarThemeMac::registerScrollbar):
(WebCore::ScrollbarThemeMac::scrollbarThickness):
(WebCore::scrollbarWidthToNSControlSize): Deleted.

Canonical link: https://commits.webkit.org/265691@main