Source/WebCore/page/scrolling/mac/ScrollerPairMac.h
@@ -72,6 +72,7 @@ public:
 
     FloatSize visibleSize() const;
     bool useDarkAppearance() const;
+    ScrollbarWidth scrollbarWidthStyle() const;
 
     struct Values {
         float value;
